--- a/mustapp/templates/base.html
+++ b/mustapp/templates/base.html
@@ -4,10 +4,13 @@
 <html>
 <head>
 	<title>Must Munch</title>
-	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Sonsie+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 </head>
 <body>
+	<a href="/mustapp"><h2 class="center main-header" >mustMunch</h2></a>
 	<div class='container'>
 		{% block content %}
 		{% endblock %}
