--- a/mustapp/templates/categories.html
+++ b/mustapp/templates/categories.html
@@ -2,15 +2,17 @@
 {% load staticfiles %}
 
 {% block content %}
-
-	<a href="drinks/">
-		<h4>Drinks</h4>
-	</a>
-	<a href="eats/">
-		<h4>Eats</h4>
-	</a>
-	<a href="datenight/">
-		<h4>Date Night</h4>
-	</a>
+	
+	<div class="row cat-row">
+		<div class="col m3 s12">
+			<a href="drinks/"><button class="category" >Drinks</button></a>
+		</div>
+		<div class="col m3 s12 offset-m1">
+			<a href="eats/"><button class="category" >Eats</button></a>
+		</div>
+		<div class="col m3 s12 offset-m1">
+			<a href="datenight/"><button class="category" >Dates</button></a>
+		</div>
+	</div>
 
 {% endblock %}
