--- a/mustapp/templates/base.html
+++ b/mustapp/templates/base.html
@@ -10,7 +10,23 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 </head>
 <body>
-	<a href="/mustapp"><h2 class="center main-header" >mustMunch</h2></a>
+	<div class="navbar-fixed">
+		<nav>
+    		<div class="nav-wrapper black">
+      			<a href="/mustapp" class="main-header center brand-logo">mustMunch</a>
+      			<ul id="nav-mobile" class="right">
+	      			
+	        		{% if user.is_authenticated %}
+	        			<li><a href="{% url 'logout' %}">Log Out</a></li>
+	        		{% else %}
+	        			<li><a href="login/">Log In</a></li>
+	        			<li><a href="signup/">Sign Up</a></li>
+	        		{% endif %}
+	        	<ul>
+      		</div>
+      	</nav>
+    </div>
+
 	<div class='container'>
 		{% block content %}
 		{% endblock %}
