--- a/mustapp/templates/index.html
+++ b/mustapp/templates/index.html
@@ -6,14 +6,20 @@
 		<div class="back-city">
 			<h2 class="center">Where Will You Be Munching Today?</h2>
 			<br/>
-			<form class="center" action="seattle/">
-		    	<input type="submit" value="SEATTLE" class="city" />
-			</form>
+			{% if user.is_authenticated %}
+				<form class="center" action="seattle/">
+			    	<input type="submit" value="SEATTLE" class="city" />
+				</form>
+			{% else %}
+				<form class="center" action="login/">
+			    	<input type="submit" value="SEATTLE" class="city" />
+				</form>
+			{% endif %}
 		</div>
 	</div>
 	<h4 class='coming-soon-text center'><i>Coming Soon...</i></h4>
 	<div class="row">
-		<form class="center" action="portland/">
+		<form class="center">
 		    <input type="submit" value="PORTLAND" class="city coming-soon" />
 		</form>
 	</div>
