--- a/mustapp/templates/options.html
+++ b/mustapp/templates/options.html
@@ -8,14 +8,14 @@
     <div class="col s12">
       <ul class="tabs">
       	{% if option_cat == 'drinks' %}
-	        <li class="tab col s6"><a class="active" href="eats/">Eats</a></li>
-	        <li class="tab col s6"><a href="datenight/">Dates</a></li>
+	        <li class="tab col s6"><a class="active" href="/mustapp/seattle/eats">Eats</a></li>
+	        <li class="tab col s6"><a href="/mustapp/seattle/datenight">Dates</a></li>
 	    {% elif option_cat == 'eats' %}
-	        <li class="tab col s6"><a href="drinks/">Drinks</a></li>
-	        <li class="tab col s6"><a href="datenight/">Dates</a></li>
+	        <li class="tab col s6"><a href="/mustapp/seattle/drinks">Drinks</a></li>
+	        <li class="tab col s6"><a href="/mustapp/seattle/datenight">Dates</a></li>
 	    {% elif option_cat == 'datenight' %}
-	        <li class="tab col s6"><a class="active" href="/eats">Eats</a></li>
-	        <li class="tab col s6"><a href="drinks/">Drinks</a></li>
+	        <li class="tab col s6"><a class="active" href="/mustapp/seattle/eats">Eats</a></li>
+	        <li class="tab col s6"><a href="/mustapp/seattle/drinks">Drinks</a></li>
         {% endif %}
       </ul>
     </div>
